<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.office14.coffeedose.viewmodels.OrderDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary_light"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_normal_16"
            tools:context="com.office14.coffeedose.ui.OrderDetailsFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_order_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_comment"
                android:layout_alignParentTop="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/spacing_normal_16"
                android:backgroundTint="@color/fab_background_color"
                android:elevation="@dimen/spacing_tiny_4"
                android:onClick="@{() -> viewModel.confirmOrder()}"
                android:src="@drawable/ic_done"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:tint="@null"
                android:contentDescription="@string/ConfirmOrder" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_normal_16"
                android:layout_toStartOf="@id/confirmButton"
                android:textColorHint="@color/color_regular_text"
                app:hintTextColor="@color/color_regular_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_comment"
                    style="@style/Base.TextView.Multiline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_border_with_solid"
                    android:hint="@string/CommentYourOrder" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_empty_order_details"
            style="@style/Base.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/EmptyOrderDetails" />
    </LinearLayout>
</layout>