<resources>
    <!--<string name="app_name">CoffeeDose</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DoProceed">Продолжить</string>
    <string name="DoAdd">Добавить</string>
    <string name="DoAddMore">Добавить еще</string>
    <string name="BaseURL">Base URL</string>
    <string name="ConfirmOrder">Подтвердить заказ</string>
    <string name="OrderDetails">Корзина</string>
    <string name="Catalog">Каталог</string>
    <string name="CurrentOrder">Заказ</string>
    <string name="DropInassignedOrderDetails">Очистить корзину</string>
    <string name="ContinueChoice">Продолжить выбор</string>
    <string name="ApproveOrder">Получил</string>
    <string name="EmptyOrderDetails">Список заказов пуст</string>
    <string name="AddOrProceedDialogMessage">Заказ добавлен в корзину\nХотите продолжить выбор или перейти в корзину?</string>
    <string name="Login">Войти</string>
    <string name="Logout">Выйти</string>
    <string name="ChangeUser">Сменить пользователя</string>
    <string name="Unauthrorized">Не авторизирован</string>
    <string name="CommentYourOrder">Комментарий к заказу</string>
    <string name="OrderInfoStatusTitle">Статус:</string>
    <string name="OrderInfoCommentFormat">Комментарий: %s</string>
    <string name="OrderInfoStatusDetailsHeader">Детали заказа:</string>
    <string name="default_notification_channel_id" translatable="false">cd_fcm_default_channel</string>
    <string name="OrderInfoPriceFormat">Сумма: %d ₽</string>
    <string name="PriceFormat">%d ₽</string>
    <string name="DrinkSizeAndAmountFormat">%s, %s, %s шт.</string>
    <string name="OrderInfoOrderNumberFormat">Номер: %s</string>
    <string name="SwitchTheme">Поменять тему</string>

</resources>
