...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_ins_dialog_height">

            <RelativeLayout
                android:id="@+id/view_addins_root"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_ins_dialog_height">

                <RelativeLayout
                    android:id="@+id/rl_summary"
                    android:layout_width="match_parent"
...
                    android:popupBackground="@drawable/bg_spinner_dropdown"
                    android:spinnerMode="dropdown" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/addButton"
                    android:layout_below="@id/spinnerSelectSize"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/addinsListView"
                        android:layout_width="match_parent"
...
